<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:padding="18dp"
    android:layout_height="match_parent"
    android:background="@drawable/degradado_fondo"
    tools:context=".RegisterActivity">
    
    <LinearLayout
        android:id="@+id/tittle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/cuestionarioDades"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="18dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:contentDescription="@string/tittle_app"
            android:src="@drawable/ic_trooka_tittle"
            app:tint="@color/trooka_tittle">
        </ImageView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/cuestionarioDades"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="80dp"
        app:layout_constraintBottom_toTopOf="@+id/llRegistrarse"
        app:layout_constraintTop_toBottomOf="@id/tittle">

        <EditText
            android:id="@+id/etUserReg"
            android:autofillHints="Nombre de usuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:layout_marginBottom="13dp"
            android:hint="@string/nombre_usuario"
            android:inputType="text"
            android:background="@android:color/white"/>
        <EditText
            android:id="@+id/etCorreoReg"
            android:autofillHints="Correo electrònico"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:layout_marginBottom="13dp"
            android:hint="@string/correo_electronico"
            android:inputType="textEmailAddress"
            android:background="@android:color/white"/>
        <EditText
            android:id="@+id/etPassReg"
            android:autofillHints="Contraseña"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:layout_marginBottom="13dp"
            android:hint="@string/contraseña"
            android:inputType="text"
            android:background="@android:color/white"/>
        <EditText
            android:id="@+id/etRePassReg"
            android:autofillHints="Repetir contraseña"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:layout_marginBottom="13dp"
            android:hint="@string/repetir_contraseña"
            android:inputType="text"
            android:background="@android:color/white"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llRegistrarse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@+id/cuestionarioDades"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/btnRegistrarse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registrarse"
            android:textColor="@color/white"
            android:backgroundTint="@color/init_session"
            android:textSize="18sp"
            android:paddingVertical="12dp"/>

        <TextView
            android:id="@+id/tvIniciarSesion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/iniciar_sesion"
            android:textColor="@color/enlaces"
            android:textSize="16sp"
            android:focusable="true"
            android:clickable="true"
            android:background="?attr/selectableItemBackground"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>