...
            android:layout_marginBottom="0dp"
            android:hint="@string/contraseña"
            android:inputType="textPassword"
            android:background="@android:color/white"/>

        <Button
            android:id="@+id/btnIniciarSesion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/init_session"
            android:textSize="18sp"
            android:paddingVertical="12dp"
...
